--- a/src/components/widgetNurse/patient_update.scss
+++ b/src/components/widgetNurse/patient_update.scss
@@ -1,4 +1,5 @@
 .patientUpdate {
+
     display: flex;
     width: 30%;
     justify-content: space-between;
@@ -39,6 +40,8 @@
 
 button {
     padding: 5px 10px;
+    border: 0px;
+    height: 44px;
     font-size: 1em;
     cursor: pointer;
     background-color: #d5c1ff;
