--- a/src/pages/Nurse/home/homeNurse.scss
+++ b/src/pages/Nurse/home/homeNurse.scss
@@ -4,7 +4,7 @@
   .navNurse{ //homeContainer class is navbar
 
     flex: 2;     //used to divide both sidebar and navbar
-    margin-left: 250px;    //used to get the space between sidebar and navbar
+    margin-left: 300px!important;    //used to get the space between sidebar and navbar
   }
 
 
