--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,9 +8,46 @@
 
 .headerTitle{
     justify-content: center;
-    margin-left: 100px;
+    margin-left: 150px;
     margin-top: 150px;
 }
+
+.search {
+    /* position: absolute; */
+    /* margin: 12% 54%; */
+    transform: translate(-50%, -50%); /* Centering trick */
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    padding: 7px;
+    background-color: #fff;
+    border-radius: 50px; /* Rounded corners */
+    width: 700px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a box shadow */
+    margin-left: 500px;
+    margin-top: 50px;
+  }
+
+  .search input {
+    flex: 1;
+    border: none;
+    outline: none;
+    padding: 8px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+  }
+  
+  .search button {
+    border: none;
+    background-color: #5F2BCF;
+    color: #fff;
+    padding: 8px 20px;
+    margin-left: 10px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+  }
 
 
 .headerContainer{
@@ -43,11 +80,11 @@
 
 .headerDesc{
     margin: 20px 0px ;
-    margin-left: 300px;
+    margin-left: 350px;
 }
 
 .headerBtn{
-    background-color: #855CDD;
+    background-color: #5F2BCF;
     color: white;
     font-weight: 500;
     border: none;
@@ -60,7 +97,7 @@
 .headerSerch{
     height: 50px;
     background-color: white;
-    border: 3px solid #855CDD;
+    border: 3px solid #5F2BCF;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -82,7 +119,7 @@
     margin-top: 150px;
     margin-bottom:-130px;
     margin-left: 220px;
-    color: #855CDD;
+    color: #5F2BCF;
     align-items: center;
     justify-content: center;
 }
