Changed navigation of LUDOctorsView

--- a/src/components/widgetRec/widgetRec.scss
+++ b/src/components/widgetRec/widgetRec.scss
@@ -40,6 +40,7 @@
         justify-content: center; /* Center items vertically */
         align-items: center;
         height: 100%; /* Ensure the container takes the full height of its parent */
+        margin-left: 0px;
 
         .curr_No, .room_No{
             font-size: 25px;
