--- a/src/components/widgetNurse/patient_update.scss
+++ b/src/components/widgetNurse/patient_update.scss
@@ -1,25 +1,45 @@
-.patientUpdate {
+.mypatientUpdate {
 
     display: flex;
-    width: 30%;
-    justify-content: space-between;
+    width: 80%;
+    // justify-content: space-between;
     align-items: center;
 
     height: 160px;
     // border: 1px solid #ccc;
     border-radius: 10px;
-    margin: 10px 0;
+    padding-left: 15px;
+    padding-right: 15px;
     background-color: #EEE7FF;
 }
 
-.left {
+.leftt {
+    width: 50%;
     display: flex;
     flex-direction: column;
+
+    
+}
+.middle {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .title {
     font-size: 1.2em;
     font-weight: bold;
+
+}
+.name {
+    font-size: 1.5em;
+    font-weight:bold;
+
+}
+.room {
+    font-size: 1.2em;
+    font-weight:lighter;
 
 }
 
@@ -58,17 +78,19 @@ button {
     cursor: pointer;
     background-color: #d5c1ff;
     border-radius: 5px;
-
     white-space: nowrap; /* Prevents text from wrapping */
     overflow: hidden; /* Hides overflow text */
     text-overflow: ellipsis; 
 }
 
 
-.right {
-    margin-left: 100px;
+.rightt {
+    width: 15%;
     display: flex;
-    align-items: right;
+    align-items: center;
+
+    align-content: center;
+    margin-left: 20px;
 
 .title {
     font-size: 1.2em;
