--- a/src/components/widgetNurse/patient_update.scss
+++ b/src/components/widgetNurse/patient_update.scss
@@ -1,45 +1,25 @@
-.mypatientUpdate {
+.patientUpdate {
 
     display: flex;
-    width: 80%;
-    // justify-content: space-between;
+    width: 30%;
+    justify-content: space-between;
     align-items: center;
 
     height: 160px;
     // border: 1px solid #ccc;
     border-radius: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 10px 0;
     background-color: #EEE7FF;
 }
 
-.leftt {
-    width: 50%;
+.left {
     display: flex;
     flex-direction: column;
-
-    
-}
-.middle {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-
 }
 
 .title {
     font-size: 1.2em;
     font-weight: bold;
-
-}
-.name {
-    font-size: 1.5em;
-    font-weight:bold;
-
-}
-.room {
-    font-size: 1.2em;
-    font-weight:lighter;
 
 }
 
@@ -78,19 +58,17 @@ button {
     cursor: pointer;
     background-color: #d5c1ff;
     border-radius: 5px;
+
     white-space: nowrap; /* Prevents text from wrapping */
     overflow: hidden; /* Hides overflow text */
     text-overflow: ellipsis; 
 }
 
 
-.rightt {
-    width: 15%;
+.right {
+    margin-left: 100px;
     display: flex;
-    align-items: center;
-
-    align-content: center;
-    margin-left: 20px;
+    align-items: right;
 
 .title {
     font-size: 1.2em;
