--- a/src/pages/cura/chatbot/chatbot.scss
+++ b/src/pages/cura/chatbot/chatbot.scss
@@ -9,6 +9,16 @@
   flex-direction: column;
 }
 
+.mainchat{
+  color: #000;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  padding-top: 50px;
+  max-width: 2000px;
+  margin: 4% 20% 10% 30%;
+}
 .background-image {
   position: absolute;
   top: 0;
@@ -18,11 +28,10 @@
   z-index: -1; 
 }
 
-.vector-image {
-  position: absolute; 
-  top: 170px; 
-  right: 1700px;
-  width: 40px; 
+.vector-imagechat {
+  top: 150px;
+  right: 80%;
+  width: 40px;
   height: auto;
 }
 
@@ -42,7 +51,7 @@
   display: flex;
   //align-items: end;
   justify-content: center;
-  padding: 20px;
+  padding: 15px;
   background-color: #fff;
   border-radius: 50px; /* Rounded corners */
   width: 100%;
@@ -70,13 +79,14 @@
   font-size: 16px;
 }
 
-.paragraph {
+.paragraphchat {
 
   font-size: 20px;
-  position: absolute;
+  //position: absolute;
   font-style: normal;
   font-weight: 300;
-  //margin: 1% 20% 40% 10% ;
+  margin-bottom: 10px;
+  margin-top: 50px;
 
 
 
