--- a/src/pages/medical_history/details/details.scss
+++ b/src/pages/medical_history/details/details.scss
@@ -1,41 +1,50 @@
-.appointments {
-  display: flex;
-  height: 100vh;
+.sideMRview{
+  display: flex; //home class is sidebar
+}
+.navMRview { //homeContainer class is navbar
+
+  flex: 2; //used to divide both sidebar and navbar
+  margin-left: 10px; //used to get the space between sidebar and navbar
 }
 
-.appointmentsContainer {
-  flex: 8;
-  display: flex;
-  flex-direction: column;
-}
-.main{
+.mainContentMRview{
+  display: grid;
   color: #000;
   font-size: 25px;
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 80% */
   padding-top: 10px;
-  max-width: 1000px;
-  margin: 0 20%;
+  max-width: 2000px;
+  margin: 6% 10% 10% 25%;
 }
-.sub{
+.subContentMRview{
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 300;
   line-height: 20px; /* 111.111% */
   padding-top: 10px;
-  max-width: 1000px;
+  margin-bottom: 40px;
+}
+.buttonsContainer{
+  margin-top: 10px;
+
+
+
+}
+.cardsContainer{
+  margin-top: 20px;
+
+}
+.navbar2 .wrapper2 {
+  padding: 0px;
+  margin-top: 0px;
+}
+.MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root{
+  font-size: 25px;
 }
 
-.content{
-  color: #000;
-
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 20px; /* 111.111% */
-  padding-top: 80px;
-  max-width: 1000px;
-
+.line {
+  margin-bottom: 16px; /* Adjust the value as needed */
 }
