--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -12,9 +12,9 @@
             margin: 20px;
             display: flex;
             margin-top: 80px;
-            margin-left: 280px;
+            margin-left: 350px;
             h1 {
-                    color: lightgray;
+                    color: black;
                     font-size: 20px;
                 }
         }
@@ -28,7 +28,7 @@
     margin: 20px;
     display: flex;
     margin-top: 20px;
-    margin-left: 280px;
+    margin-left: 350px;
 
 
         h1 {
@@ -87,11 +87,11 @@
     width: 150px;
     padding: 10px;
     border: none;
-    background-color: purple;
+    background-color: #855CDD;
     color: white;
     font-weight: bold;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 
