--- a/src/pages/channeling/channeling.scss
+++ b/src/pages/channeling/channeling.scss
@@ -14,16 +14,22 @@
                     font-size: 25px;
                     margin-left: 90px;
                     margin-bottom: 20px;
-                    color: rgb(186, 108, 231);
+                    color: #000;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 20px; /* 80% */
                 }
         
                 .finddoctore22 {
                     display: flex;
                     margin-top: -10px;
-                    font-size: 15px;
                     margin-left: 90px;
                     margin-bottom: 20px;
-                    color: black;
+                    color: #000;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 300;
+                    line-height: 20px; /* 111.111% */
                 }
 
     .headerSerch2 {
@@ -47,9 +53,11 @@
             color: gray;
             border-radius: 10px;
             font-size: 17px;
-            border: 1px solid rgb(186, 108, 231);
-            width: 300px;
-            height: 50px;
+            border: 1px solid rgb(0, 0, 0);
+            width: 379px;
+            height: 54px;
+            flex-shrink: 0;
+            box-shadow: 0px 0px 12.1px 0px rgba(0, 0, 0, 0.10);
         }
 
 
@@ -93,14 +101,24 @@
     margin-left: 300px;
 }
 
-.headerBtn2 {
-    background-color: rgb(186, 108, 231);
+.headerBtn2chan {
+    background-color: #855CDD;
     color: white;
     font-weight: 500;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
-    padding: 10px 15px;
+    display: flex;
+    width: 188px;
+    height: 49px;
+    padding: 17px 56px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 11px;
+    background: var(--Normal, #855CDD);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 
@@ -123,6 +141,8 @@
     align-items: center;
     gap: 10px;
     margin-left: 80px;
+    padding-top: 40px;
+    padding-bottom: 2px;
 }
 
 
@@ -134,14 +154,16 @@
     font-size: 17px;
 }
 
-.headerSearchtext2 {
+.headerSearchtext2chan {
+    outline: none;
     color: gray;
-    cursor: pointer;
-    border: 1px solid rgb(186, 108, 231);
-    width: 300px;
-    height: 50px;
     border-radius: 10px;
     font-size: 17px;
+    border: 1px solid rgb(0, 0, 0);
+    width: 379px;
+    height: 54px;
+    flex-shrink: 0;
+    box-shadow: 0px 0px 12.1px 0px rgba(0, 0, 0, 0.10);
 }
 
 .date2 {
@@ -152,10 +174,21 @@
     border: 3px solid #0071c2;
 }
 
-.lables{
-    margin-left: 20px;
-    margin-bottom: -50px;
-    font-weight: bold;
+.lableschan{
+    width: 395px;
+    height: 18px;
+    flex-shrink: 0;
+    color: #000;
+
+    /* body */
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px; /* 125% */
+    margin-left: 12px;
+    padding-top: 30px;
+    padding-bottom: 0;
+
 }
 
 .option {
@@ -197,25 +230,25 @@
     cursor: not-allowed;
 }
 
-.askqura{
+.askqurachan{
     display: flex;
-    border: 1px solid rgb(186, 108, 231);
+    border: 1px solid #855CDD;
     width: 400px;
-    height: 600px;
+    height: 650px;
     border-radius: 10px;
     font-size: 17px;
-    margin-top: 100px;
+    margin-top: 120px;
     margin-right: 120px;
 }
 
-.askquraImage{
+.askquraImagechan{
     width: 300px;
     height: 300px;
     object-fit: cover;
-    margin-left: 40px;
+    margin-left: 50px;
     margin-top: 20px;
-    border-radius: 10px;
-    border: 3px solid rgb(186, 108, 231);
+    //border-radius: 10px;
+    //border: 3px solid rgb(186, 108, 231);
 
 }
 
@@ -233,15 +266,15 @@
     color: rgb(186, 108, 231);
 }
 
-.askCuraButtton{
-    background-color: rgb(186, 108, 231);
+.askCuraButttonchan{
+    background-color: #855CDD;
     color: white;
     font-weight: 500;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     padding: 10px 15px;
-    margin-left: 80px;
+    margin-left: 140px;
     margin-top: 40px;
-    width: 250px;
+    width: 120px;
 }
