--- a/src/pages/doctorNLU/doctorNLU.css
+++ b/src/pages/doctorNLU/doctorNLU.css
@@ -1,172 +1,15 @@
-.homenlu {
-    display: flex; 
-}   
-
-.hotelContainernLU {
+.DoctorNLU{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-    flex: 6; 
-}
 
-.hotelfooternLU{
-    background-color: rgb(186, 108, 231);
-    display: flex;
-    flex: 6;
-    margin-top: 50px;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-}
-.hotelWrappernLU{
-    width: 100%;
-    max-width: 1024px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    position: relative;
-}
+    .LUDVhomeContainer2lu{
 
-.bookNownLU {
-    position: absolute;  /*make position*/
-    top: 10px;
-    right: 0;
-    border: none;
-    padding: 10px 20px;
-    background-color: #855CDD;
-    color: white;
-    font-weight: bold;
-    border-radius: 5px;
-    cursor: pointer;
-    /* filter: blur(4px); */
-}
+        flex: 6;  
+        margin-left: 250px; 
+        margin-right: 130px;
+    }
 
-.hotelTitlenLU {
-    font-size: 24px;
-}
-
-.hotelAddressnLU {
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.hotelDistancenLU {
-    color: #0071c2;
-    font-weight: 500;
-}
-
-.hotelPriceHighlightnLU {
-    color: #008009;
-    font-weight: 500;
-}
-
-.hotelImagesnLU {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* separate each pictures*/
-}
-
-
-.hotelImgWrappernLU {
-    width: 33%;
-}
-
-.hotelImgnLU {
-    width: 100%;
-    object-fit: cover;
-    cursor: pointer;
-}
-
-.hotelDetailsnLU {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.hotelDetailsTextsnLU {
-    flex: 3;
-}
-
-.hotelDescnLU {
-    font-size: 14px;
-    margin-top: 20px;
-}
-
-.hotelDetailsPricenLU {
-    flex: 1;
-    background-color: #ebf3ff;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: -200px;
-}
-
-.hotelDetailsPricenLU>h1 {
-    font-size: 18px;
-    color: #555;
-}
-
-.hotelDetailsPricenLU>span {
-    font-size: 14px;
-}
-
-.hotelDetailsPricenLU>h2 {
-    font-weight: 300;
-}
-
-.hotelDetailsPricenLU>button {
-    border: none;
-    padding: 10px 20px;
-    background-color: #855CDD;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-    /* filter: blur(2px); */
-}
-
-.slidernLU {
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.613);
-    z-index: 999;
-    display: flex;
-    align-items: center;
-}
-
-.sliderWrappernLU {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.sliderImgnLU {
-    width: 80%;
-    height: 80vh;
-}
-
-.closenLU {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 30px;
-    color: lightgray;
-    cursor: pointer;
-}
-
-.arrownLU {
-    margin: 20px;
-    font-size: 50px;
-    color: lightgray;
-    cursor: pointer;
+    .LUDVbodyContainerLu{
+        margin: 40px;
+        margin-top: 100px;
+    }
 }
