--- a/src/components/sidebarPatient/sidebarPatient.scss
+++ b/src/components/sidebarPatient/sidebarPatient.scss
@@ -125,6 +125,9 @@
       }
 
       .detailsPatient {
+        display: flex;
+        flex-direction: column;
+
         .namePatient {
           align-self: stretch;
           color: var(--skyethemes-com-mine-shaft, #363636);
@@ -132,7 +135,6 @@
           font-style: normal;
           font-weight: 400;
           line-height: 14px; /* 116.667% */
-
         }
 
         .emailPatient {
