--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,22 +1,36 @@
 .navbar {
-    height: 50px;
+    height: 60px;
     background-color: white;
     display: flex;
     justify-content: center;
+    z-index: 1000;
+    width: 100%;
+    margin-right: 150px;
 }
 
 .navContainer {
+    background-color: white;
+    margin-top: 10px;
     width: 100%;
-    max-width: 1024px;
     color: #855CDD;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-left: 100px;
+}
+.newItem{
+    margin-left: 800px;
+    margin-right: 100px;
+}
+.logo {
+    font-weight: 100;
+    font-size: 20px;
+    width: 150px;
+    height: auto;
 }
 
-.logo {
-    font-weight: 700;
-    font-size: 20px;
+.navleft{
+    margin-left: 100px;
 }
 
 .navButton {
