Added the toggle buttons for selecting doctors for the nurse

--- a/src/pages/Nurse/patient_number/updatePatientNumber.scss
+++ b/src/pages/Nurse/patient_number/updatePatientNumber.scss
@@ -1,16 +1,16 @@
-.name{
-    font-size: 1em !important;
-}
+// .name{
+//     font-size: 1em !important;
+// }
 
-.room{
-    margin-top: 5px;
-    font-size: 0.8em !important;
-}
+// .room{
+//     margin-top: 5px;
+//     font-size: 0.8em !important;
+// }
 
-.title{
-    font-size: 1em !important;
-}
+// .title{
+//     font-size: 1em !important;
+// }
 
-.updateButton{
-    font-size: 0.8em !important;
-}
+// .updateButton{
+//     font-size: 0.8em !important;
+// }
