--- a/src/components/searchItemLUNEW2/searchItemLUN2.css
+++ b/src/components/searchItemLUNEW2/searchItemLUN2.css
@@ -1,4 +1,4 @@
-.searchItemR {
+/* .searchItemR {
     border: 1px solid rgb(186, 108, 231);
     padding: 10px;
     border-radius: 5px;
@@ -108,4 +108,4 @@
     border: none;                   
     cursor: pointer;
     border-radius: 5px;
-}
+} */
