--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,10 +1,10 @@
 .datatableadm{
-    height: 600px;
+    height: 550px;
     padding: 20px;
     margin-left: 320px;
 
     .datatableTitleadm {
-            width: 100%;
+            // width: 100%;
             font-size: 24px;
             font-weight: bold;
             color: black;
